@@ -4,20 +4,20 @@
 
    Copyright (C) 2000 John Harper <john@dcs.warwick.ac.uk>
 
-   This file is part of librep.
+   This file is part of sawfish.
 
-   librep is free software; you can redistribute it and/or modify it
+   sawfish is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 2, or (at your option)
    any later version.
 
-   librep is distributed in the hope that it will be useful, but
+   sawfish is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 
    You should have received a copy of the GNU General Public License
-   along with Jade; see the file COPYING.  If not, write to
+   along with sawfish; see the file COPYING.  If not, write to
    the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 |#
 
