@@ -3,7 +3,9 @@
 
 	* lisp/sawfish/wm/state/shading.jl: merge changes from sawfish-pager
 
-	* lisp/sawfish/wm/util/display-window.jl: replace "librep" by "sawfish" in the copyright header
+	* lisp/sawfish/wm/swapper
+	* lisp/sawfish/wm/windows
+	* lisp/sawfish/wm/util/display-window.jl: replace "librep"/"Jade" by "sawfish" in the copyright header
 
 2009-01-11  Mario Blättermann  <mariobl@svn.gnome.org>
 	* po/de.po: Updated German translation.
